--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.okhttp3:okhttp:3.12.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
 
     //Scaled dp/sp
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
@@ -71,4 +72,15 @@ dependencies {
     //RxJava2
     implementation "io.reactivex.rxjava2:rxjava:2.2.7"
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
+    implementation 'com.jakewharton.rx:replaying-share-kotlin:2.0.0'
+    implementation "com.github.akarnokd:rxjava2-extensions:0.16.0"
+    implementation 'com.jakewharton.rxrelay2:rxrelay:2.0.0'
+
+    //
+//    implementation 'com.jakewharton.rxbinding4:rxbinding:4.0.0'
+    implementation 'com.jakewharton.rxbinding2:rxbinding:2.0.0'
+
+    //XML
+//    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.11.+"
+    implementation 'com.github.javadev:underscore:1.59'
 }
