--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,18 +38,18 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation 'androidx.core:core-ktx:1.6.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // Support libraries
-    implementation "androidx.appcompat:appcompat:1.2.0"
-    implementation "androidx.fragment:fragment:1.2.5"
-    implementation "androidx.constraintlayout:constraintlayout:2.0.1"
+    implementation "androidx.appcompat:appcompat:1.3.0"
+    implementation "androidx.fragment:fragment:1.3.5"
+    implementation "androidx.constraintlayout:constraintlayout:2.0.4"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.material:material:1.4.0'
 
     //Utils
 
@@ -87,4 +87,7 @@ dependencies {
     //XML
 //    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.11.+"
     implementation 'com.github.javadev:underscore:1.59'
+
+    //Yahoo Stocks
+    implementation group: 'com.yahoofinance-api', name: 'YahooFinanceAPI', version: '3.15.0'
 }
